# JKRArchiveTool

./: .gitignore  CMakeLists.txt  Makefile  Static.mk
Include/: BinaryReaderAndWriter.h  JKRArchive.h  Util.h
Source/: BinaryReaderAndWriter.cpp  JKRArchive.cpp  JKRCompression.cpp  Main.cpp  Util.cpp
